# tl-ex

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
src/: funtranslation_provider.rs  language_policies.rs  main.rs  rustemon_provider.rs  service.rs  tests.rs
src/tests/: utils.rs
tests/: acceptance.rs
