[package]
name = "tl-ex"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Michele d'Amico <michele.damico@gmail.com>"]

[dependencies]
actix-web = "4.13.0"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
thiserror = "2.0.18"
async-trait = "0.1.89"
actix-http = "3.12.0"
rustemon = "4.5.0"
actix-rt = "2.11.0"

[dev-dependencies]
assert_cmd = "2.2.0"
rstest = "0.26.1"
